# mkdir_tester

./: LICENSE  README.md  conftest.py  mkdir_tester.py  pytest.ini  pytest_custom_output.py  pytest_mark_incremental.py  setup.cfg  setup.py
docs/: Common-options.html  chmod-1.txt  environ-7.txt  links.txt  mkdir-1.txt  mkdir-2.txt  mkdir-invocation.html  mkdir.2.html  mkdir_man.txt  notes.md  umask-1.txt
tests/: test_1_prerequisities.py  test_2_name_ascii.py  test_3_name_utf8.py  test_4_dir_multiple.py  test_5_options.py  test_name_ascii.py  test_name_utf8.py  test_options.py  test_prerequisities.py
tests/basic/: test_basic.py  test_extra.py
