[metadata]
name = mkdir-tester-pkg
version = 0.5.0
author = Jaroslav Groman
author_email = jgroman@users.noreply.github.com
description = mkdir command tester
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgroman/mkdir_tester
project_urls =
    Bug Tracker = https://github.com/jgroman/mkdir_tester/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
install_requires = pytest sh
package_dir =
    = mkdir_tester
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mkdir_tester
